language/move-lang/tests/move_check/typing/assign_wrong_type.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/assign_wrong_type.move:8:9
  │
8 │         S { g } = R {f :0};
  │         ^^^^^^^   -------- Expected: '0x8675309::M::R'
  │         │          
  │         Invalid deconstruction assignment
  │         Given: '0x8675309::M::S'

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/assign_wrong_type.move:9:10
  │
9 │         (S { g }, R { f }) = (R{ f: 0 }, R{ f: 1 });
  │          ^^^^^^^              --------- Expected: '0x8675309::M::R'
  │          │                     
  │          Invalid deconstruction assignment
  │          Given: '0x8675309::M::S'

error[E04005]: expected a single type
   ┌─ tests/move_check/typing/assign_wrong_type.move:13:13
   │
13 │         let x;
   │             ^ Invalid type for local
   ·
16 │         x = ();
   │             -- Expected a single type, but found expression list type: '()'

error[E04005]: expected a single type
   ┌─ tests/move_check/typing/assign_wrong_type.move:16:9
   │
16 │         x = ();
   │         ^   -- Expected a single type, but found expression list type: '()'
   │         │    
   │         Invalid type for local

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/assign_wrong_type.move:17:9
   │
17 │         () = 0;
   │         ^^   - Given: integer
   │         │     
   │         Invalid value for assignment
   │         Expected: '()'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/assign_wrong_type.move:18:9
   │
18 │         (x, b, R{f}) = (0, false, R{f: 0}, R{f: 0});
   │         ^^^^^^^^^^^^   ---------------------------- Given expression list of length 4: '({integer}, bool, 0x8675309::M::R, 0x8675309::M::R)'
   │         │               
   │         Invalid value for assignment
   │         Expected expression list of length 3: '(_, _, _)'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/assign_wrong_type.move:19:9
   │
19 │         (x, b, R{f}) = (0, false);
   │         ^^^^^^^^^^^^   ---------- Given expression list of length 2: '({integer}, bool)'
   │         │               
   │         Invalid value for assignment
   │         Expected expression list of length 3: '(_, _, _)'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/assign_wrong_type.move:27:10
   │
23 │         let x = false;
   │                 ----- Expected: 'bool'
   ·
27 │         (x, b, R{f}, r) = (0, false, R{f: 0}, R{f: 0});
   │          ^
   │          │
   │          Invalid assignment to local 'x'
   │          Given: integer

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/assign_wrong_type.move:27:13
   │
24 │         let b = 0;
   │             - Expected: integer
   ·
27 │         (x, b, R{f}, r) = (0, false, R{f: 0}, R{f: 0});
   │             ^                 ----- Given: 'bool'
   │             │                  
   │             Invalid assignment to local 'b'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/assign_wrong_type.move:27:18
   │
 2 │     struct R {f: u64}
   │                  --- Given: 'u64'
   ·
25 │         let f = @0x0;
   │                 ---- Expected: 'address'
26 │         let r = S{ g: 0 };
27 │         (x, b, R{f}, r) = (0, false, R{f: 0}, R{f: 0});
   │                  ^ Invalid assignment to local 'f'

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/assign_wrong_type.move:27:22
   │
26 │         let r = S{ g: 0 };
   │                 --------- Expected: '0x8675309::M::S'
27 │         (x, b, R{f}, r) = (0, false, R{f: 0}, R{f: 0});
   │                      ^                        ------- Given: '0x8675309::M::R'
   │                      │                         
   │                      Invalid assignment to local 'r'

